# vllm

./: .gitignore  CMakeLists.txt  Dockerfile.cpu  Makefile  README.md  analyze.ipynb  cpu.bench.Dockerfile  cpu.dev.Dockerfile  init_env.sh  profile_wna16.py  requirements-cpu.txt  setup.py
.buildkite/: run-cpu-test.sh
.buildkite/scripts/: upload-wheels.sh
benchmarks/: backend_request_func.py  benchmark_latency.py  benchmark_serving.py  benchmark_throughput.py
benchmarks/kernels/: activation.py  benchmark.py  linear.py  pos_encoding.py  rmsnorm.py
cmake/: cpu_extension.cmake
csrc/: CMakeLists.txt  activation.cpp  activation_kernels.cu  attention.cpp  cache.cpp  cache.h  cache_kernels.cu  dispatch_utils.h  layernorm.cpp  layernorm_kernels.cu  my_linear_layer.cpp  pos_encoding.cpp  pos_encoding_kernels.cu  pybind.cpp
csrc/attention/: attention_kernels.cu
csrc/cpu/: activation_impl.cpp  attention.cpp  attention_impl.cpp  awq.cpp  cache.cpp  cache_impl.cpp  cpu_fused_moe.cpp  cpu_ops.h  cpu_types.hpp  cpu_types_arm.hpp  cpu_types_x86.hpp  cpu_wna16.cpp  dnnl_helper.cpp  dnnl_helper.h  dnnl_kernels.cpp  layernorm_impl.cpp  pos_encoding.cpp  pos_encoding_impl.cpp  pybind.cpp  quant_utils.hpp  shm_ccl.cpp  torch_bindings.cpp  utils.cpp
csrc/cpu/intel_amx/: common.h  decode_attn.cpp  gemm.cpp  gemm.h  prefill_attn.cpp  vec.h
examples/: offline_inference.py  offline_inference_with_prefix.py
requirements/: cpu.txt
tests/distributed/: test_pipeline_parallel.py
utils/: tensor_dump.py
vllm/: _custom_ops.py  config.py  envs.py  logger.py  utils.py
(+79 files in other folders)
